# django_table_ui

./: .gitignore  conftest.py  hello.py  manage.py  pyproject.toml
scripts/: aliases.sh
seeds/: admin.py  models.py  urls.py  views.py
seeds/api/: schemas.py
seeds/management/commands/: delete_crop_varieties.py  import_crop_varieties.py
seeds/migrations/: 0001_add_crops_and_varieties.py  0001_initial.py
seeds/templates/seeds/: varieties_list.html
seeds/tests/: factories.py  test_imports.py
table_ui/: asgi.py  settings.py  urls.py  wsgi.py
