[project]
name = "django-table-ui"
version = "0.1.0"
description = "Experiments with rendering manageable tables from django models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.5",
    "pytest-django>=4.9.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "django-click>=2.4.0",
    "django-ninja>=1.3.0",
    "factory-boy>=3.3.1",
    "ruff>=0.9.2",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D212", "D203", "D102", "D105"]

[tool.ruff.per-file-ignores]
"test_*" = ["S101"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    # https://github.com/vitalik/django-ninja/issues/1266
    # TODO: Remove this once the issue is resolved
    "ignore::django.utils.deprecation.RemovedInDjango60Warning:ninja.signature.utils",
    # https://github.com/vitalik/django-ninja/issues/1093
    # TODO: Remove this once the issue is resolved
    "ignore::DeprecationWarning:pydantic",
]
